--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -33,11 +33,11 @@
 				</tr> -->
 
 				<tr>
-					<td><label>05.Các kí hiệu mẫu vật khác:</label></td>
+					<td><label>04.Các kí hiệu mẫu vật khác:</label></td>
 					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>06.Thông tin khác:</label></td>
+					<td><label>05.Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"></td>
 				</tr>
 			</table>
@@ -46,22 +46,22 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU VẬT</h3>
 				<tr>
-					<td><label>07.Tên Việt Nam <span class="has-required">(*)</span>:</label></td>
+					<td><label>06.Tên Việt Nam <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>08.Tên địa phương:</label></td>
+					<td><label>07.Tên địa phương:</label></td>
 					<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>09.Tên Tiếng Anh:</label></td>
+					<td><label>08.Tên Tiếng Anh:</label></td>
 					<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>10. Tên theo hệ thống PL của bảo tàng:</label></td>
+					<td><label>09. Tên theo hệ thống PL của bảo tàng:</label></td>
 					<td><input type="text" title="{{tooltips[10]}}" name="tenTheoBaoTang" ng-model="data.tenTheoBaoTang" class="input-form"></td>
 				</tr>
-				<tr><td><label>11. Tên khoa học (tên latin)</label></td></tr>
+				<tr><td><label>10. Tên khoa học (tên latin)</label></td></tr>
 				<tr>
 					<td>Tên đồng nghĩa:</td>
 					<td><input type="text" title="{{tooltips[11]}}" name="tenDongNghia" ng-model="data.tenDongNghia" id="tenDongNghia" class="input-form"></td>
@@ -124,11 +124,11 @@
 					<td><input type="text" title="{{tooltips[24]}}" name="duoiLoai" ng-model="data.duoiLoai" class="input-form" id="duoiLoai"></td>
 				</tr>
 				<tr>
-					<td><label>12. Người định tên: </label></td>
+					<td><label>11. Người định tên: </label></td>
 					<td><input type="text" title="{{tooltips[25]}}" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form" ></td>
 				</tr>
 				<tr>
-					<td><label>13. Thông tin khác:</label></td>
+					<td><label>12. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[26]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"></td>
 				</tr>
 			</table>
@@ -141,7 +141,7 @@
 					<td><input type="number" min="0" title="{{tooltips[27]}}" name="soLuongMauVat" ng-model="data.soLuongMauVat" class="input-form"></td>
 				</tr> -->
 				<tr>
-					<td><label>15. Số lượng tiêu bản:</label></td>
+					<td><label>13. Số lượng tiêu bản:</label></td>
 					<td><input type="number" min = "0" title="{{tooltips[28]}}" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 				</tr>
 				<tr>
@@ -229,11 +229,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>18. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>16. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[31]}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>19. Thông tin khác:</label></td>
+					<td><label>17. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[32]}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form"></td>
 				</tr>		
 			</table>
@@ -242,19 +242,19 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
-					<td><label>20. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>18. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="date" title="{{tooltips[33]}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>21. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>19. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[34]}}" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>22. Cơ quan thu mẫu: </label></td>
+					<td><label>20. Cơ quan thu mẫu: </label></td>
 					<td><input type="text" id="coQuanThuMau" ng-model="data.coQuanThuMau" title="{{tooltips[35]}}" name="coQuanThuMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>23. Phương pháp thu mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>21. Phương pháp thu mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[36]}}" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" required></td>
 				</tr>
 				<tr><td><label>22. Địa điểm thu mẫu: </label></td></tr>
@@ -307,7 +307,7 @@
 						</table>
 					</td>
 				</tr>
-				<tr><td><label>25. Vị trí tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
+				<tr><td><label>23. Vị trí tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
 				<tr>
 					<td>Vĩ độ N <span class="has-required">(*)</span>:</td>
 					<td><input type="text" title="{{tooltips[42]}}" name="viDo" ng-model="data.viDo" class="input-form" required></td>
@@ -317,35 +317,35 @@
 					<td><input type="text" title="{{tooltips[43]}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>26. Độ cao <span class="has-required">(*)</span>: </label></td>
+					<td><label>24. Độ cao <span class="has-required">(*)</span>: </label></td>
 					<td><input type="text" title="{{tooltips[44]}}" name="doCao" ng-model="data.doCao" class="input-form" required ></td>
 				</tr>
 				<tr>
-					<td><label>27. Độ sâu:</label></td>
+					<td><label>25. Độ sâu:</label></td>
 					<td><input type="number" title="{{tooltips[45]}}" name="doSau" ng-model="data.doSau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>28. Vùng biển:</label></td>
+					<td><label>26. Vùng biển:</label></td>
 					<td><input type="text" title="{{tooltips[46]}}" name="vungBien" ng-model="data.vungBien" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>29. Sinh học/sinh thái:</label></td>
+					<td><label>27. Sinh học/sinh thái:</label></td>
 					<td><input type="text" title="{{tooltips[47]}}" name="sinhHoc" ng-model="data.sinhHoc" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>30. Thông tin về dự án, đề tài đợt thu nhập mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>28. Thông tin về dự án, đề tài đợt thu nhập mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[48]}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>31. Ghi chép thực địa <span class="has-required">(*)</span>:</label></td>
+					<td><label>29. Ghi chép thực địa <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[49]}}" name="ghiChepThucDia" ng-model="data.ghiChepThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>32. Bản đồ:</label></td>
+					<td><label>30. Bản đồ:</label></td>
 					<td><input type="file" title="{{tooltips[50]}}" name="banDo" ng-model="data.banDo" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>33. Thông tin khác:</label></td>
+					<td><label>31. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[51]}}" name="thongTinKhac4" class="input-form" ng-model="data.thongTinKhac4"></td>
 				</tr>
 			</table>
@@ -354,23 +354,23 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 				<tr>
-					<td><label>34. Thời gian phân tích/giám định/định loại mẫu:</label></td>
+					<td><label>32. Thời gian phân tích/giám định/định loại mẫu:</label></td>
 					<td><input type="date" title="{{tooltips[52]}}" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>35. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>33. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[53]}}" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>36. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required">(*)</span>:</label></td>
+					<td><label>34. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td><input type="text" title="{{tooltips[54]}}" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 				</tr>
-				<tr><td><label>37. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td></tr>
+				<tr><td><label>35. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required"> (*)</span>:</label></td></tr>
 				<tr>
 					<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips[55]}}" name="taiLieuPhanTichStr" class="input-form" required></td>
 					<td><input type="file" ng-model="data.taiLieuPhanTichFile" multiple title="{{tooltips[55]}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
 				</tr>
-				<tr><td><label>38. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td></tr>
+				<tr><td><label>36. Mô tả/đặc điểm hình thái <span class="has-required"> (*)</span></label></td></tr>
 				<tr>
 					<td>
 						<input type="text" title="{{tooltips[56]}}" ng-model="data.moTaHinhThaiStr" name ="moTaHinhThaiStr" class="input-form">		
@@ -380,11 +380,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>39. Hình vẽ:</label></td>
+					<td><label>37. Hình vẽ:</label></td>
 					<td><input type="file" title="{{tooltips[57]}}" name="hinhVe" ng-model="data.hinhVe" class="input-form" accept="image/x-png, image/gif, image/jpeg"></td>
 				</tr>
 				<tr>
-					<td><label>40. Thông tin khác:</label></td>
+					<td><label>38. Thông tin khác:</label></td>
 					<td><input type="text" title="{{tooltips[58]}}" name="thongTinKhac5" class="input-form" ng-model="data.thongTinKhac5"></td>
 				</tr>
 			</table>
@@ -393,26 +393,26 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
-					<td><label>41. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
+					<td><label>39. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td><input type="file" multiple title="{{tooltips[59]}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg" valid-file required></td>
 				</tr>
 				<tr>
-					<td><label>42. Hình ảnh mẫu ngoài thực địa:</label></td>
+					<td><label>40. Hình ảnh mẫu ngoài thực địa:</label></td>
 					<td><input type="file" accept="image/x-png, image/gif, image/jpeg" multiple title="{{tooltips[60]}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>43. Thông tin về phim, video: </label></td>
+					<td><label>41. Thông tin về phim, video: </label></td>
 					<td>
 						<input type="text" title="" title="{{tooltips[61]}}" name="videoStr" ng-model="data.videoStr" class="input-form" >
 					</td>
 					</tr>
 				<tr>
-					<td><label>44. Đính kèm phim, video:</label></td>
+					<td><label>42. Đính kèm phim, video:</label></td>
 					<td>
 						<input type="file" accept="video/mp4,video/x-m4v,video/*" title="{{tooltips[62]}}" name="videoFile" ng-model="data.videoFile" class="input-form">
 					</td>
 				</tr>
-				<tr><td colspan="2"><label>45. Xử lý chế tác mẫu vật: </label></td></tr>
+				<tr><td><label>43. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 					<td><input type="file" multiple title="{{tooltips[63]}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/x-png, image/gif, image/jpeg" class="input-form"></td>
@@ -437,7 +437,7 @@
 					<td>Ảnh mẫu sau chế tác:</td>
 					<td><input type="file" title="{{tooltips[68]}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg" ></td>
 				</tr>
-				<tr><td colspan="2"><label>46. Thông tin DNA</label></td></tr>
+				<tr><td><label>44. Thông tin DNA</label></td></tr>
 				<tr>
 					<td>Vị trí lấy mẫu DNA (lá, thân, rễ,...):</td>
 					<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[69]}}" name="boPhanLayMauDNA" ng-model="data.boPhanLayMauDNA" class="input-form"></td>
