--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -4,6 +4,7 @@
 		<button type="button" class="btn btn-success" ng-click="selectAll()">Select all</button>
 		<button type="button" class="btn btn-primary" ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</button>
 		<button type="button" class="btn btn-primary" ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</button>
+		<button type="button" class="btn btn-primary" ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</button>
 	</div>
 	<div class="list-group" ng-repeat="(key, post) in data">
 		<li class="list-group-item">		
