--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -609,6 +609,10 @@
 				</tr>
 			</table>
 		</div>
-		<center><button style="margin-top: 30px;" type="submit" class="btn btn-success btn-lg">Thêm mẫu</button></center>
+		<center>
+			<button style="margin-top: 30px;" type="submit" class="btn btn-success btn-lg">Thêm mẫu</button>
+			<button style="margin-top: 30px;" ng-click="saveCookies()" type="button" class="btn btn-success btn-lg">Lưu bản nháp</button>
+			<button style="margin-top: 30px;" ng-click="getCookies()" type="button" class="btn btn-success btn-lg">Lấy lại bản nháp</button>
+		</center>
 	</form>
 </div>
